--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,13 @@ services:
       MINIO_ROOT_PASSWORD: minioadmin
     command: server --console-address ":9090" /data
 
+  server:
+    build: .
+    container_name: server
+    ports:
+      - "8000:8000"
+    depends_on:
+      - minio
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+    volumes:
+      - .:/app
