--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-DATABASE_URL=sqlite+aiosqlite:////./example-db.sqlite
-LOGGING_LEVEL=DEBUG
+DATABASE_URL=sqlite+aiosqlite:///./chatdb.tmp.sqlite
+LOGGING_LEVEL=INFO
 WS_MAX_CONNECTIONS_PER_USER=2
-WS_PERIODICALLY_UPDATE_LAST_ACTIVE=10
-WS_STALE_CONNECTION_THRESHOLD=30
+WS_PERIODICALLY_UPDATE_LAST_ACTIVE=20
+WS_STALE_CONNECTION_THRESHOLD=40
 WS_PERIODICALLY_CLEAN_STALE_CONNECTIONS=5
-WS_MAX_SIMULTANEOUS_USERS=50
-WS_CHECK_TIMEZONE_CONSTRAINT=1
+WS_MAX_SIMULTANEOUS_USERS=1000
+WS_CHECK_TIMEZONE_CONSTRAINT=0
 # 0 to disable
-MINIO_ENDPOINT=minio:9000
+#MINIO_ENDPOINT=minio:9000
+MINIO_ENDPOINT=localhost:9000
 MINIO_BUCKET_NAME=tiro-assistant
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
