--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ WS_PERIODICALLY_CLEAN_STALE_CONNECTIONS=5
 WS_MAX_SIMULTANEOUS_USERS=1000
 WS_CHECK_TIMEZONE_CONSTRAINT=0
 # 0 to disable
-#MINIO_ENDPOINT=minio:9000
-MINIO_ENDPOINT=localhost:9000
+MINIO_ENDPOINT=minio:9000
+MINIO_ENDPOINT_PUBLIC=localhost:9000
 MINIO_BUCKET_NAME=tiro-assistant
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
